--- a/drivers/gpu/msm/Kconfig
+++ b/drivers/gpu/msm/Kconfig
@@ -65,9 +65,9 @@ config DRM_OPLUS_PANEL_NOTIFY
 	 Say 'n' to not support oplus notify
 
 config QCOM_KGSL_IDLE_TIMEOUT
-	int
+	int "GPU idle timeout value"
 	default 100000 if !QGKI
-	default 80
+	default 58
 	help
 	  GPU idle timeout for Adreno GPU. This value decides after how
 	  long the GPU will go into slumber. A higher value will mean that
