--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -857,7 +857,7 @@ config PROCESS_RECLAIM
 	bool "Enable process reclaim"
 	depends on PROC_FS
 	depends on QGKI
-	default y
+	default n
 	help
 	 It allows to reclaim pages of the process by /proc/pid/reclaim.
 
