drivers: input: Don't compile unneeded drivers
Change-Id: I000b2d58b0ed53b1522699fac7297030d61f833a

--- a/drivers/input/oplus_fp_drivers/Makefile
+++ b/drivers/input/oplus_fp_drivers/Makefile
@@ -1,7 +1,7 @@
 obj-$(CONFIG_OPLUS_FINGERPRINT_COMMON) += oplus_fp_common/
 
 ### Capacitive fingerprint sensor
-obj-$(CONFIG_OPLUS_FINGERPRINT_FPC) += fpc/
+#obj-$(CONFIG_OPLUS_FINGERPRINT_FPC) += fpc/
 obj-$(CONFIG_OPLUS_FINGERPRINT_GOODIX) += goodix_optical_fp/
 obj-$(CONFIG_OPLUS_FINGERPRINT_SILEAD) += silead/
 
